# DRF_Template

./: .gitignore  example.env  pyproject.toml
api/app/: services.py  tasks.py
core/: celery.py  settings.py  urls.py
